fix upsert and add cart
