# docs/swagger.json
@@ -744,7 +744,7 @@
         ],
         "summary": "Add products to cart",
         "operationId": "addProducts",
-        "description": "Add products to cart",
+        "description": "Add a single product to the user's cart.",
         "security": [
           {
             "bearerAuth": []
@@ -757,12 +757,20 @@
               "schema": {
                 "type": "object",
                 "required": [
-                  "items"
+                  "productId",
+                  "quantity"
                 ],
                 "properties": {
-                  "items": {
-                    "type": "object",
-                    "$ref": "#/components/schemas/postItems"
+                  "productId": {
+                    "type": "string",
+                    "description": "ID of the product to add",
+                    "example": "65e4decdd286b30065d54af9"
+                  },
+                  "quantity": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "description": "Quantity of the product",
+                    "example": 3
                   }
                 }
               }
@@ -1217,25 +1225,6 @@
             "description": "When the cart was updated",
             "type": "string",
             "example": "2025-05-30T10:23:10.962+00:00"
-          }
-        }
-      },
-      "postItems": {
-        "type": "object",
-        "required": [
-          "productId",
-          "quantity"
-        ],
-        "properties": {
-          "productId": {
-            "description": "Product id",
-            "type": "string",
-            "example": "65e4decdd286b30065d54af9"
-          },
-          "quantity": {
-            "description": "Product quantity",
-            "type": "number",
-            "example": 3
           }
         }
       },
