# src/validation/cart.js
@@ -1,12 +1,10 @@
 import Joi from 'joi';
 
 export const cartAddSchema = Joi.object({
-  items: Joi.object({
-    productId: Joi.string().required(),
-    quantity: Joi.number().integer().min(1).required().messages({
-      'number.min': "Quantity can't be less then 1",
-    }),
-  }).required(),
+  productId: Joi.string().required(),
+  quantity: Joi.number().integer().min(1).required().messages({
+    'number.min': "Quantity can't be less then 1",
+  }),
 });
 
 export const cartUpdateSchema = Joi.object({
